[gd_scene load_steps=4 format=3 uid="uid://b8xqnc5hvmyku"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]
[ext_resource type="PackedScene" uid="uid://dg8kvm2nqh3pt" path="res://scenes/ui/character_viewport.tscn" id="2_viewport"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.12, 1)

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="LeftSidebar" type="VBoxContainer" parent="MainLayout"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 2

[node name="Nav_Battle" type="Button" parent="MainLayout/LeftSidebar"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
size_flags_vertical = 3
text = "BATTLE"

[node name="Nav_Rewards" type="Button" parent="MainLayout/LeftSidebar"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
size_flags_vertical = 3
text = "REWARDS"

[node name="Nav_Deck" type="Button" parent="MainLayout/LeftSidebar"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
size_flags_vertical = 3
text = "DECK"

[node name="Nav_Shop" type="Button" parent="MainLayout/LeftSidebar"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
size_flags_vertical = 3
text = "SHOP"

[node name="Nav_Trade" type="Button" parent="MainLayout/LeftSidebar"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
size_flags_vertical = 3
text = "TRADE"

[node name="Nav_Guild" type="Button" parent="MainLayout/LeftSidebar"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
size_flags_vertical = 3
text = "GUILD"

[node name="RightSection" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="TopBar" type="MarginContainer" parent="MainLayout/RightSection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/RightSection/TopBar"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayerInfo" type="VBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NameTitle" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerName" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo/NameTitle"]
layout_mode = 2
text = "Commander"
theme_override_font_sizes/font_size = 16

[node name="Separator" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo/NameTitle"]
layout_mode = 2
text = "|"
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)

[node name="PlayerTitle" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo/NameTitle"]
layout_mode = 2
text = "Rookie"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14

[node name="LevelRow" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LevelLabel" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo/LevelRow"]
layout_mode = 2
text = "Lv. 8"
theme_override_font_sizes/font_size = 12

[node name="XPBar" type="ProgressBar" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo/LevelRow"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
size_flags_vertical = 4
value = 45.0
show_percentage = false

[node name="XPText" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/PlayerInfo/LevelRow"]
layout_mode = 2
text = "450 / 1000"
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 10

[node name="RankDisplay" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RankEmblem" type="ColorRect" parent="MainLayout/RightSection/TopBar/HBoxContainer/RankDisplay"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.7, 0.5, 0.2, 1)

[node name="RankInfo" type="VBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer/RankDisplay"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RankName" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/RankDisplay/RankInfo"]
layout_mode = 2
text = "BRONZIUM"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12

[node name="TierRow" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer/RankDisplay/RankInfo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TierLabel" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/RankDisplay/RankInfo/TierRow"]
layout_mode = 2
text = "TIER 4"
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 11

[node name="RankPoints" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/RankDisplay/RankInfo/TierRow"]
layout_mode = 2
text = "1491"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="Spacer" type="Control" parent="MainLayout/RightSection/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Currencies" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Credits" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CreditsIcon" type="ColorRect" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Credits"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.8, 0.4, 0.2, 1)

[node name="CreditsLabel" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Credits"]
layout_mode = 2
size_flags_vertical = 1
text = "1,500"
theme_override_colors/font_color = Color(1, 0.7, 0.4, 1)

[node name="Gems" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GemIcon" type="ColorRect" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Gems"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.3, 0.6, 0.9, 1)

[node name="GemsLabel" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Gems"]
layout_mode = 2
size_flags_vertical = 1
text = "361"
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)

[node name="AddGemsBtn" type="Button" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Gems"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_vertical = 4
text = "+"

[node name="Gold" type="HBoxContainer" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GoldIcon" type="ColorRect" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Gold"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_vertical = 4
color = Color(1, 0.85, 0.2, 1)

[node name="GoldLabel" type="Label" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Gold"]
layout_mode = 2
size_flags_vertical = 1
text = "7,620"
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)

[node name="AddGoldBtn" type="Button" parent="MainLayout/RightSection/TopBar/HBoxContainer/Currencies/Gold"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_vertical = 4
text = "+"

[node name="FriendsButton" type="Button" parent="MainLayout/RightSection/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Friends"
text = "F"
flat = true

[node name="CollectionButton" type="Button" parent="MainLayout/RightSection/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Card Collection"
text = "C"
flat = true

[node name="SettingsButton" type="Button" parent="MainLayout/RightSection/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Settings"
text = "="
flat = true

[node name="ContentArea" type="HBoxContainer" parent="MainLayout/RightSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterArea" type="VBoxContainer" parent="MainLayout/RightSection/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="CharacterViewport" type="SubViewportContainer" parent="MainLayout/RightSection/ContentArea/CenterArea"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
stretch = true

[node name="SubViewport" parent="MainLayout/RightSection/ContentArea/CenterArea/CharacterViewport" instance=ExtResource("2_viewport")]

[node name="CommanderName" type="Label" parent="MainLayout/RightSection/ContentArea/CenterArea"]
layout_mode = 2
text = "THE GRAND INQUISITOR"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 28

[node name="CharacterSelector" type="HBoxContainer" parent="MainLayout/RightSection/ContentArea/CenterArea"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
theme_override_constants/separation = 15

[node name="RightPanel" type="VBoxContainer" parent="MainLayout/RightSection/ContentArea"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0
theme_override_constants/separation = 8

[node name="Mode_1v1" type="Panel" parent="MainLayout/RightSection/ContentArea/RightPanel"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Label" type="Label" parent="MainLayout/RightSection/ContentArea/RightPanel/Mode_1v1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "1 vs 1"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="Mode_2vs2" type="Panel" parent="MainLayout/RightSection/ContentArea/RightPanel"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Label" type="Label" parent="MainLayout/RightSection/ContentArea/RightPanel/Mode_2vs2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "2 vs 2"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="BottomModes" type="HBoxContainer" parent="MainLayout/RightSection/ContentArea/RightPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Mode_TeamUp" type="Panel" parent="MainLayout/RightSection/ContentArea/RightPanel/BottomModes"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Label" type="Label" parent="MainLayout/RightSection/ContentArea/RightPanel/BottomModes/Mode_TeamUp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "TEAM UP
(2 vs 2)"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="Mode_Training" type="Panel" parent="MainLayout/RightSection/ContentArea/RightPanel/BottomModes"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Label" type="Label" parent="MainLayout/RightSection/ContentArea/RightPanel/BottomModes/Mode_Training"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "TRAINING"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="ComingSoonPopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="ComingSoonPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="Label" type="Label" parent="ComingSoonPopup/VBoxContainer"]
layout_mode = 2
text = "Coming Soon!"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="CloseButton" type="Button" parent="ComingSoonPopup/VBoxContainer"]
layout_mode = 2
text = "OK"
